@@ -9,6 +9,8 @@
     * Added missing counts on event indicator evaluations when setting problem data in solvers.
     * Radau5 bugfix introduced in re-factorization, do not skip LU-factorizations if no new Jacobian is needed.
     * Fixed Radau5 bug where simulation would not stop when time limit has been exceeded.
+    * Radau5(ODE) errors due to Exceptions in callbacks will now raise these Exceptions, rather than Radau5Error.
+    * KeyboardInterrupt in Radau5ODE solout callback (e.g., event_indicator) will properly terminate simulation.
 
 --- Assimulo-3.3.1 ---
     * Minor refactoring of Radau5 C implementation:
